# mc-angular-interface

./: pyproject.toml
src/mc_angular_interface/: __init__.py
